fix layout/spacing issues

--- a/src/components/Organisims/ProjectList/ProjectList.module.scss
+++ b/src/components/Organisims/ProjectList/ProjectList.module.scss
@@ -6,9 +6,9 @@
 }
 
 .columns {
-  display: flex;
-  flex-wrap: wrap;
-  margin: -1rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 1.6rem;
 }
 
 .email {
@@ -16,26 +16,9 @@
   @include animate-link-hover(var(--color-accent), left);
 }
 
-.column {
-  padding: 1rem;
-  flex: 1 0 100%;
-
-  &.tablet {
-    @media #{$tablet} {
-      flex: 0 0 50%;
-    }
-  }
-
-  &.desktop {
-    @media #{$desktop} {
-      flex: 0 0 33.3333%;
-    }
-  }
-}
-
 .image {
   position: relative;
-  aspect-ratio: 3 / 2;
+  aspect-ratio: 5 / 4;
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
@@ -53,6 +36,10 @@
       opacity: 1;
     }
   }
+}
+
+.projectItem {
+  display: block;
 }
 
 .projectThumb {
@@ -80,7 +67,7 @@
 
 .logoCentered {
   object-fit: contain;
-  filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.6));
+  filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
 }
 
 .caption {
@@ -93,7 +80,7 @@
   width: 100%;
   height: 100%;
   padding: 1.6rem;
-  background: var(--color-secondary);
+  background: var(--color-primary);
   color: var(--color-bg);
   opacity: 0;
   transition: opacity .3s ease-in-out;
